<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.ektorp</groupId>
	<artifactId>ektorp</artifactId>
	<name>ektorp</name>
	<packaging>war</packaging>
	<version>1.6</version>
	<properties>
		<ektorp.version>1.1.1</ektorp.version>
		<spring.version>3.0.5.RELEASE</spring.version>
		<slf4j.version>1.6.1</slf4j.version>
		<junit.version>4.8.1</junit.version>
		 <motech.version>0.11</motech.version>
        <motech.contrib.group>org.motechproject.contrib-drishti</motech.contrib.group>
        <motech.contrib.version>0.1-SNAPSHOT</motech.contrib.version>
       <drishti.updatePolicy>always</drishti.updatePolicy>
	</properties>
	
	   <distributionManagement>
        <repository>
            <id>motech.nexus</id>
            <name>Motech Releases Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
            <uniqueVersion>false</uniqueVersion>
        </repository>
        <snapshotRepository>
            <id>motech.nexus</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/drishti</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <pluginRepositories>
        <pluginRepository>
            <id>jasmine-js-bdd</id>
            <name>Jasmine JavaScript BDD Repository</name>
            <url>http://searls-maven-repository.googlecode.com/svn/trunk/snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <repositories>
        <repository>
            <id>central</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Repository for dependencies</name>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-maven-release</id>
            <name>Spring Maven Release Repository</name>
            <url>http://maven.springframework.org/release</url>
        </repository>
        <repository>
            <id>spring-maven-milestone</id>
            <name>Spring Maven Milestone Repository</name>
            <url>http://maven.springframework.org/milestone</url>
        </repository>
        <repository>
            <id>motech.drishti</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/drishti</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>${drishti.updatePolicy}</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>motech.nexus</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>${drishti.updatePolicy}</updatePolicy>
            </snapshots>
        </repository>
        <repository>
            <id>motech.nexus.release</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/releases</url>
        </repository>
    </repositories>
	
	<dependencies>
		<!-- Compile dependencies -->
		<dependency>
			<groupId>org.ektorp</groupId>
			<artifactId>org.ektorp</artifactId>
			<version>${ektorp.version}</version>
		</dependency>
		<dependency>
			<groupId>org.ektorp</groupId>
			<artifactId>org.ektorp.spring</artifactId>
			<version>${ektorp.version}</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time-jsptags</artifactId>
			<version>1.0.1</version>
			<exclusions>
				<exclusion>
					<artifactId>jsp-api</artifactId>
					<groupId>javax.servlet</groupId>
				</exclusion>
			</exclusions>
		</dependency> 
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<!-- Container-provided dependencies -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>jsp-api</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
		  <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.1</version>
        </dependency>
        
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>motech-testing-utils</artifactId>
            <version>${motech.version}</version>
            <scope>test</scope>
        </dependency>
        
          <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>motech-schedule-testing</artifactId>
            <version>0.12-DRISTHI-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>
		
		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
	<pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>install</id>
						<phase>install</phase>
						<goals>
							<goal>sources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>7.0.1.v20091125</version>
				<configuration>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<webAppConfig>
						<contextPath>/</contextPath>
					</webAppConfig>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2-beta-2</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>project</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			
			  <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <argLine>-XX:MaxPermSize=1024M</argLine>
                            <includes>
                                <include>**/*IntegrationTest.java</include>
                            </includes>
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <printSummary>true</printSummary>
                    <excludes>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
        </pluginManagement>
			
		
	</build>
</project>